# nunu-downloader

./: Cargo.toml  README.md
src/: main.rs
src/parser/: mod.rs  page_parser.rs  url_parser.rs
src/req/: fetcher.rs
