[package]
name = "nunu-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["cargo"] }
regex = "1.6"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
